# mosquito

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml  setup.py
mosquito/: process_abf.py  read_photron.py  util.py
scratch/: analyze_DNg02_data.ipynb  analyze_highspeed_vid_scratch.ipynb  analyze_multichannel_data.ipynb  b1_phase_analysis.ipynb  b1_phase_analysis_multichannel.ipynb  chatgpt_video_player.py  check_spike_detection.ipynb  check_stim_data.ipynb  deal_phone_photos.ipynb  fig_example_emg_data.ipynb  get_spike_number_data.ipynb  get_spike_rate_wbf_data.ipynb  icn_poster_figures.ipynb  icn_poster_figures_raw_emg.ipynb  icn_poster_figures_spike_rate_wbf.ipynb  icn_poster_figures_steering.ipynb  intro_analysis_nb.ipynb  my_downsample_video.ipynb  plot_spike_detection.ipynb  power_mn_phase_check.ipynb  prelim_abf_read.ipynb  quick_odor_check.ipynb  read_processed_abf.ipynb  remove_notch_filter_effect.ipynb  segment_fly_photos.ipynb  spike_number.ipynb  spike_number_old.ipynb  spike_rate_and_stroke_amp.ipynb  splay_state_analysis.ipynb  temp_add_benifly_all.ipynb  test_analyze_bursts.ipynb  test_detrend_data.ipynb  test_emg_summation.ipynb  test_kinefly_imitation_scratch.ipynb  test_merge_vids.py  test_python_read_mraw.ipynb  test_wavelet_spike_detection.ipynb  thad_alysha_data.ipynb  troubleshoot_drosophila_spike_detection.ipynb  video_viewer.py  (+5 more)
scratch/aggregate_data/: get_sample_sizes.ipynb  get_spike_rate_wbf_data.ipynb  make_data_frame.ipynb  temp_log_idx.csv
scratch/manuscript/: fig1_spike_rate_wbf.ipynb  fig2_burst_plots.ipynb
scratch/phone_image_processing/: deal_phone_photos.ipynb  try_image_registration.ipynb
scratch/photo_code/: deal_phone_photos.ipynb
scratch/power_analysis/: spike_number.ipynb  (+5 more)
(+42 files in other folders)
