[project]
name = "mosquito"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Sam", email = "samcwhitehead@gmail.com"}]
requires-python = ">= 3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mosquito = { path = ".", editable = true }

[tool.pixi.tasks]
