[project]
name = "mosquito"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Sam", email = "samcwhitehead@gmail.com"}]
requires-python = ">= 3.11"
dependencies = ["pyabf"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
mosquito = { path = ".", editable = true }

[tool.pixi.tasks]
nb = "jupyter notebook"
postinstall = "pixi add pip && pip install -e ./external/pySciCam/ && pixi remove pip"
transfer = "python ./src/mosquito/transfer_data.py"
process = "python ./src/mosquito/process_abf.py"

[tool.pixi.dependencies]
matplotlib = ">=3.8.4,<3.9"
scipy = ">=1.13.0,<1.14"
pandas = ">=2.2.2,<2.3"
numpy = ">=1.26.4,<1.27"
ipykernel = ">=6.29.3,<6.30"
openpyxl = ">=3.1.2,<3.2"
cython = ">=3.0.10,<3.1"
xmltodict = ">=0.13.0,<0.14"
opencv = ">=4.9.0,<4.10"
scikit-learn = ">=1.4.2,<1.5"
jupyter = ">=1.0.0,<1.1"
h5py = ">=3.11.0,<3.12"
pixi-pycharm = ">=0.0.5,<0.1"
python-neo = ">=0.13.0,<0.14"
natsort = ">=8.4.0,<8.5"
tqdm = ">=4.66.4,<4.67"
scikit-image = ">=0.20.0,<0.23"

